--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -1087,6 +1087,19 @@ footer {
 					font-size: 16px;
 					font-weight: bold;
 					margin-top: 1rem;
+					transition: all 0.3s ease;
+
+					&:disabled,
+					&.disabled {
+						opacity: 0.5;
+						cursor: not-allowed;
+						background-color: #666 !important;
+
+						&:hover {
+							background-color: #666 !important;
+							color: #fff !important;
+						}
+					}
 				}
 
 				// Hide meta (SKU, categories, tags)
